# rk2

./: README.md  activate
.github/workflows/: build.yml  ci.yml  main.yml
lab02dz/: lab02dz.cpp
lab04dz/: .appveyor.yml.swo  .gitignore  .travis.yml  appveyor.yml
lab04dz/.github/workflows/: build.yml  ci.yml
lab04dz/hello_world/: CMakeLists.txt
lab04dz/hello_world/include/: my_header.h
lab04dz/hello_world/src/: main.cpp
lab04dz/hello_world/test/: test.cpp
lab05dz/banking/: .gitignore  CMakeLists.txt
lab05dz/banking/.github/workflows/: ci.yml  main.yml
lab05dz/banking/include/: Account.h  Transaction.h
lab05dz/banking/src/: Account.cpp  Transaction.cpp
lab05dz/banking/test/: AccountTest.cpp  TransactionTest.cpp
lab06/: CMakeLists.txt  CPackConfig.cmake  ChangeLog.md
lab06/.github/workflows/: build.yml
lab06/projects/lab06/: .gitignore  CMakeLists.txt  Makefile  your_upload_script.sh
lab06/projects/lab06/.github/workflows/: main.yml
lab06/projects/lab06/tests/: print.cpp  print.hpp  test1.cpp
lab07dz/: .gitignore  CMakeLists.txt  README.md  kali-hunter_1.0-1.dsc  kali-hunter_1.0-1_all.deb  kali-hunter_1.0-1_amd64.buildinfo  kali-hunter_1.0-1_amd64.changes
lab07dz/.github/workflows/: build.yml  ci.yml  release.yml
lab07dz/cmake/: Config.cmake.in  HunterGate.cmake
lab07dz/include/lab07dz/: lab07dz.hpp
lab07dz/kali-hunter-package/debian/: changelog  control  debhelper-build-stamp  files  rules
lab07dz/kali-hunter-package/debian/kali-hunter/DEBIAN/: control  md5sums
lab07dz/src/: lab07dz.cpp
lab07dz/tests/: test.cpp
rk2/: .gitignore  CMakeLists.txt
rk2/.github/workflows/: build.yml
rk2/tests/: CMakeLists.txt  test_database.cpp  test_proxy.cpp
